# ceres3

./: .gitignore  Dockerfile  README.md  config.py  meson.build  pyproject.toml  worker.py
dist-manylinux/: ceres3-1.0.5-cp312-cp312-linux_x86_64.whl  ceres3-1.0.6-cp312-cp312-linux_x86_64.whl  ceres3-1.0.6-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  ceres3-1.0.7-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  ceres3-1.0.8-cp312-cp312-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  ceres3-1.0.8-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl
src/ceres3/: __init__.py  cli.py  postprocess.py
src/ceres3/ext/: CCF-f2pywrappers.f  CCFmodule.c  __init__.py  ccf.f  ccf.pyf  funnorm.c  marsh.c  meson.build
src/ceres3/instruments/: __init__.py  arcespipe.py  arcesutils.py  cafepipe.py  cafeutils.py  coraliepipe.py  coralieutils.py  dupontpipe.py  dupontutils.py  espadonspipe.py  espadonsutils.py  fabryperot.py  ferospipe_fp.py  ferosutils.py  ferosutils_fp.py  fideospipe.py  fideosutils.py  fiespipe.py  fiesutils.py  groups.py  harpspipe.py  harpsutils.py  hirespipe.py  hiresutils.py  mikepipe.py  mikeutils.py  pfspipe.py  pfsutils.py  pucherospipe.py  pucherosutils.py  uvespipe.py  uvesutils.py  vbtpipe.py  vbtutils.py  wav2.py
src/ceres3/utils/: __init__.py  activity.py  continuum.py  correlation.py  vels.py  (+3 more)
tests/: test_activity_1d.py
wheelhouse/: ceres3-1.0.5-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl
(+6 files in other folders)
